--- a/model.css
+++ b/model.css
@@ -12,6 +12,24 @@
     border-radius: 7px;
 }
 
+.info span {
+    color: black;
+    font-size: medium;
+}
+
+.spanContainer {
+    display: inline-block;
+    width: 65px;
+    padding-left: 70px;
+    padding-right: 12px;
+    margin-bottom: 20px;
+}
+
+.info {
+    width: 1200px;
+    text-align: left;
+}
+
 input[type=range] {
     -webkit-user-select: none;
     user-select: none;
@@ -24,7 +42,7 @@ sup {
     font-size:0.75em;
 }
 body {
-    background-color:#fcfdbc;
+    background-color:#f1cd58bd;
     font-family:sans-serif;
     font-size:15px;
     line-height:18px;
